--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2012-12-21  Daiki Ueno  <ueno@gnu.org>
+
+	Fix W64 build errors.
+	* autogen.sh (GNULIB_MODULES_LIBASPRINTF): Add extern-inline, for
+	the last xsize.h update.
+	(GNULIB_MODULES_TOOLS_FOR_SRC_COMMON_DEPENDENCIES): Add locale,
+	not to have copies of locale.h in both libgrep and gnulib-lib.
+	(GNULIB_MODULES_LIBGETTEXTPO): Add close.
+
 2012-12-08  Daiki Ueno  <ueno@unixuser.org>
 
 	* autogen.sh: Ignore libunistring tests which are known to fail.
