--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-21  Daiki Ueno  <ueno@gnu.org>
+
+	Fix W64 build errors.
+	* woe32dll/export.h (IMP) [_WIN64]: Prefix "__imp_" instead of
+	"_imp__".
+
 2012-12-17  Daiki Ueno  <ueno@unixuser.org>
 
 	* configure.ac: Use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.
