--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-20  Daiki Ueno  <ueno@gnu.org>
+
+	localecharset: respect the thread-specific locale on Mac OS X
+	* lib/localcharset.c (locale_charset) [DARWIN7]: Use MB_CUR_MAX_L
+	instead of MB_CUR_MAX.
+
 2012-12-21  Daiki Ueno  <ueno@gnu.org>
 
 	Fix W64 build errors.
