--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	Work around error_* symbol conflict with Cygwin 1.7 DLL.
+	* lib/error.h.diff: Rename the error_* symbol if
+	GNULIB_REPLACE_ERROR is defined.
+
 2012-12-12  Daiki Ueno  <ueno@unixuser.org>
 
 	Add notice about included external libraries.
