--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	* intl-exports.c (IMP): Check __MINGW32__ as well as _WIN64.
+
 2012-12-20  Daiki Ueno  <ueno@gnu.org>
 
 	localecharset: respect the thread-specific locale on Mac OS X
