--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,5 +1,9 @@
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
+	* woe32dll/export.h (IMP): Check __MINGW32__ as well as _WIN64.
+
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
 	Work around error_* symbol conflict with Cygwin 1.7 DLL.
 	* configure.ac: Reset ac_cv_lib_error_at_line on Cygwin.
 	(GETTEXTLIB_EXPORTS_FLAGS): Add -DGNULIB_DEFINED_ERROR if the
