--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,9 @@
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
+	* autopoint.in: Update for 0.18.2.
+
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
 	* gettext-0.18.2 released.
 
 2010-08-30  Bruno Haible  <bruno@clisp.org>
