--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-27  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext.texi (Plural forms): Fix ngettext arguments.
+	Reported by Reinhard Schaffner <rschaffner@zynga.com>.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
