--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2013-01-03  Daiki Ueno  <ueno@gnu.org>
+
+	* xgettext.c (construct_header): Fix memory leak.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
