--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,10 @@
+2013-01-07  Daiki Ueno  <ueno@gnu.org>
+
+	* autopoint.in: Extract version number from configure.ac in a more
+	robust way.
+	Reported by Tom G. Christensen in
+	<http://lists.gnu.org/archive/html/bug-gnulib/2013-01/msg00053.html>.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* autopoint.in: Update for 0.18.2.
