--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-09  Andreas Stricker  <astricker@futurelab.ch>  (tiny change)
+
+	* po-xerror.c: Include error.h for error_message_count.
+	* read-catalog-abstract.c: Likewise.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
