Fix link errors related to C99-style extern inline.
After recent C99-style extern inline changes in gnulib, functions
defined in xsize.h are now declared as "extern inline".  That means
the libraries using those functions need to be linked to xsize.o.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-01-17  Daiki Ueno  <ueno@gnu.org>
+
+	Fix link errors related to C99-style extern inline.
+	Reported by Sam Thursfield <sam.thursfield@codethink.co.uk>.
+	* autogen.sh (GNULIB_MODULES_LIBASPRINTF): Add xsize.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
