--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,13 @@
+2013-01-17  Daiki Ueno  <ueno@gnu.org>
+
+	Fix link errors related to C99-style extern inline.
+	Reported by Sam Thursfield <sam.thursfield@codethink.co.uk>.
+	* Makefile.in (SOURCES): Add xsize.c.
+	(OBJECTS): Add xsize.$lo.
+	(xsize.lo): New rule.
+	(printf.$lo): Add xsize.c to dependencies.
+	* xsize.c: New file, imported from gnulib.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
