--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,12 @@
+2013-01-17  Daiki Ueno  <ueno@gnu.org>
+
+	Fix link errors related to C99-style extern inline.
+	Reported by Sam Thursfield <sam.thursfield@codethink.co.uk>.
+	* Makefile.am (libasprintf_la_SOURCES): Add xsize.h and xsize.c.
+	(lib_asprintf_EXTRASOURCES): Remove xsize.h.
+	* xsize.h: Remove, replacing with the one from gnulib when
+	bootstrapping.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
