--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,13 @@
+2013-01-21  Daiki Ueno  <ueno@gnu.org>
+
+	Remove references to non-existing COPYING.LIB-2.*.
+	Reported by Christian Weisgerber <naddy@mips.inka.de>.
+	* Makefile.in (DISTFILES.obsolete): Add COPYING.LIB-2.*.
+	(install-data): Install COPYING.LIB instead of no longer existing
+	COPYING.LIB-2.*.
+	(uninstall): Remove COPYING.LIB instead of no longer existing
+	COPYING.LIB-2.*.
+
 2013-01-17  Daiki Ueno  <ueno@gnu.org>
 
 	Fix link errors related to C99-style extern inline.
