--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,10 @@
+2013-01-30  Miguel Angel Arruga Vivas  <rosen644835@gmail.com>  (tiny change)
+
+	* msgen.texi (Output details): Fix link in '@opindex' pointing to
+	msgcat.
+	Reported at <http://savannah.gnu.org/bugs/?36063>.
+	* msgmerge.texi (Output details): Likewise.
+
 2012-12-27  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext.texi (Plural forms): Fix ngettext arguments.
