--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-27  Daiki Ueno  <ueno@gnu.org>
+
+	* configure.ac (WOE32DLL): New conditional.
+	(INTL_EXPORTS_FLAGS): New substituted variable.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
