--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,13 @@
+2012-12-27  Daiki Ueno  <ueno@gnu.org>
+
+	Determine imported C symbol prefix at configure time.
+	Suggested by Evgeny Grin in <http://savannah.gnu.org/bugs/?29946>.
+	* woe32dll/export.h (IMP): Define depending on the result of the
+	configure run.
+	* configure.ac (GETTEXTLIB_EXPORTS_FLAGS): Add
+	-DUSER_LABEL_PREFIX_UNDERSCORE if imported C symbol has
+	underscore prefix.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
