--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2013-02-25  Daiki Ueno  <ueno@gnu.org>
+
+	* modules/gettext-runtime-misc (AM_CPPFLAGS): Augment by
+	INTL_EXPORTS_FLAGS.
+
 2013-01-03  Daiki Ueno  <ueno@gnu.org>
 
 	Update after gnulib changed.
