--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,12 @@
+2013-02-28  Daiki Ueno  <ueno@gnu.org>
+
+	* autopoint.in (gettext_dir): Substitute PATH_SEPARATOR at
+	configure time.
+	* gettextize.in (gettext_dir): Substitute PATH_SEPARATOR at
+	configure time.
+	Suggested by Stefano Lattarini in
+	<http://lists.gnu.org/archive/html/bug-gettext/2012-12/msg00066.html>.
+
 2013-01-07  Daiki Ueno  <ueno@gnu.org>
 
 	* autopoint.in: Extract version number from configure.ac in a more
