--- a/gettext-runtime/po/pl.po
+++ b/gettext-runtime/po/pl.po
@@ -1,20 +1,20 @@
 # Polish translations for the GNU gettext messages, gettext-runtime domain
-# Copyright (C) 1995, 1996, 1997, 1998, 1999, 2001, 2003, 2006, 2007, 2010 Free Software Foundation, Inc.
+# Copyright (C) 1995, 1996, 1997, 1998, 1999, 2001, 2003, 2006, 2007, 2010, 2013 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gettext package.
-# Rafał Maszkowski <rzm@icm.edu.pl>, 1995-1999, 2001, 2003, 2006, 2007, 2010	„”
+# Rafał Maszkowski <rzm@icm.edu.pl>, 1995-1999, 2001, 2003, 2006, 2007, 2010, 2013	„”
 # Piotr Pogorzelski <ppogorze@ippt.gov.pl>, 1995
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext-runtime 0.18\n"
+"Project-Id-Version: GNU gettext-runtime 0.18.2\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
 "POT-Creation-Date: 2012-12-25 14:19+0900\n"
-"PO-Revision-Date: 2010-05-13 22:00+0200\n"
+"PO-Revision-Date: 2013-02-26 21:40+0100\n"
 "Last-Translator: Rafał Maszkowski <rzm@icm.edu.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8-bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
 
@@ -27,9 +27,9 @@ msgid "Unknown system error"
 msgstr "Nieznany błąd systemu"
 
 #: gnulib-lib/getopt.c:547 gnulib-lib/getopt.c:576
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '%s' is ambiguous; possibilities:"
-msgstr "%s: opcja '%s' jest niejednoznaczna\n"
+msgstr "%s: opcja '%s' jest niejednoznaczna; możliwości:"
 
 #: gnulib-lib/getopt.c:624 gnulib-lib/getopt.c:628
 #, c-format
@@ -121,9 +121,9 @@ msgid "missing arguments"
 msgstr "brakujące argumenty"
 
 #: src/envsubst.c:171 src/gettext.c:238 src/ngettext.c:207
-#, fuzzy, c-format
+#, c-format
 msgid "Try '%s --help' for more information.\n"
-msgstr "Spróbuj `%s --help' żeby otrzymać więcej informacji.\n"
+msgstr "Napisz '%s --help' żeby otrzymać więcej informacji.\n"
 
 #: src/envsubst.c:176
 #, c-format, no-wrap
@@ -244,7 +244,7 @@ msgstr ""
 "                            odpowiadającego MSGID\n"
 
 #: src/gettext.c:264
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
 "environment variable TEXTDOMAIN.  If the message catalog is not found in the\n"
@@ -259,7 +259,7 @@ msgstr ""
 "ze zmiennej środowiskowej TEXTDOMAIN. Jeżeli katalog komunikatów nie zostanie\n"
 "znaleziony w domyślnym katalogu, inna lokalizacja może być podana przez\n"
 "zmienną środowiskową TEXTDOMAINDIR.\n"
-"Jeżeli użyty z opcją -s, program zachowuje się jak komenda `echo', ale zamiast\n"
+"Jeżeli użyty z opcją -s, program zachowuje się jak komenda 'echo', ale zamiast\n"
 "kopiować argumenty na standardowe wyjście tłumaczy komunikaty znalezione w\n"
 "wybranym katalogu.\n"
 "Domyślnie przeszukiwany katalog: %s\n"
