--- a/gettext-runtime/po/vi.po
+++ b/gettext-runtime/po/vi.po
@@ -1,22 +1,22 @@
 # Vietnamese Translation for Gettext Runtime.
-# Copyright © 2012 Free Software Foundation, Inc.
+# Copyright © 2013 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gettext package.
 # Clytie Siddall <clytie@riverland.net.au>, 2005-2010.
-# Trần Ngọc Quân <vnwildman@gmail.com>, 2012.
+# Trần Ngọc Quân <vnwildman@gmail.com>, 2012-2013.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-runtime 0.18\n"
+"Project-Id-Version: gettext-runtime 0.18.2\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
 "POT-Creation-Date: 2012-12-25 14:19+0900\n"
-"PO-Revision-Date: 2012-10-24 08:17+0700\n"
+"PO-Revision-Date: 2013-02-27 14:25+0700\n"
 "Last-Translator: Trần Ngọc Quân <vnwildman@gmail.com>\n"
 "Language-Team: Vietnamese <translation-team-vi@lists.sourceforge.net>\n"
 "Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Team-Website: <http://translationproject.org/team/vi.html>\n"
+"Language-Team-Website: <http://translationproject.org/team/vi.html>\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: LocFactoryEditor 1.8\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -30,9 +30,9 @@ msgid "Unknown system error"
 msgstr "Lỗi hệ thống không rõ"
 
 #: gnulib-lib/getopt.c:547 gnulib-lib/getopt.c:576
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '%s' is ambiguous; possibilities:"
-msgstr "%s: tùy chọn “%s” chưa rõ ràng\n"
+msgstr "%s: tùy chọn “%s” chưa rõ ràng; khả năng là:"
 
 #: gnulib-lib/getopt.c:624 gnulib-lib/getopt.c:628
 #, c-format
@@ -42,7 +42,7 @@ msgstr "%s: tùy chọn “--%s” không cho phép đối số\n"
 #: gnulib-lib/getopt.c:637 gnulib-lib/getopt.c:642
 #, c-format
 msgid "%s: option '%c%s' doesn't allow an argument\n"
-msgstr "%s: tùy chọn “%c%s” không cho phép đối số\n"
+msgstr "%s: tùy chọn “%c%s” không cho phép có đối số\n"
 
 #: gnulib-lib/getopt.c:685 gnulib-lib/getopt.c:704
 #, c-format
@@ -125,9 +125,9 @@ msgid "missing arguments"
 msgstr "đối số còn thiếu"
 
 #: src/envsubst.c:171 src/gettext.c:238 src/ngettext.c:207
-#, fuzzy, c-format
+#, c-format
 msgid "Try '%s --help' for more information.\n"
-msgstr "Hãy chạy câu lệnh “%s --help” để xem thêm thông tin.\n"
+msgstr "Hãy thử lệnh “%s --help” (trợ giúp) để xem thông tin thêm.\n"
 
 #: src/envsubst.c:176
 #, c-format, no-wrap
@@ -254,7 +254,7 @@ msgstr ""
 "                            từ MIỀN_VĂN_BẢN\n"
 
 #: src/gettext.c:264
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
 "environment variable TEXTDOMAIN.  If the message catalog is not found in the\n"
@@ -265,7 +265,7 @@ msgid ""
 "found in the selected catalog are translated.\n"
 "Standard search directory: %s\n"
 msgstr ""
-"Tham số MIỀN_VĂN_BẢN không đưa ra thì nó được quyết định\n"
+"Tham số MIỀN_VĂN_BẢN không đưa ra thì nó được sẽ được lấy\n"
 "từ biến môi trường TEXTDOMAIN (miền văn bản). Nếu không tìm thấy\n"
 "dữ liệu bản dịch trong thư mục bình thường, vị trí đặt khác đi có thể được\n"
 "chỉ định bằng biến môi trường TEXTDOMAINDIR (thư mục của miền văn bản).\n"
@@ -273,7 +273,7 @@ msgstr ""
 "lệnh “echo”. Nhưng nó không đơn giản sao chép các đối số của nó\n"
 "sang đầu ra tiêu chuẩn. Nó thay thế những thông điệp đã tìm trong bản dịch\n"
 "bằng bản dịch tương ứng.\n"
-"Thư mục thường dùng để quét các bản dịch: %s\n"
+"Thư mục thường dùng để quét tìm các bản dịch: %s\n"
 
 #: src/ngettext.c:212
 #, c-format, no-wrap
